--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,9 +7,9 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="LinearLayoutTest"
         android:supportsRtl="true"
-        android:theme="@style/Theme.KotlinLog"
+        android:theme="@style/Theme.LinearLayoutTest"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
